--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "apollo-client": "^2.1.0",
     "apollo-link-batch-http": "^1.0.3",
     "apollo-link-error": "^1.0.2",
+    "debounce-promise": "^3.0.2",
+    "formik": "^0.9.4",
     "graphql-tag": "^2.6.0",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
@@ -21,6 +23,7 @@
     "react-google-recaptcha": "^0.9.9",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.26.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.1",
     "semver": "^5.4.1",
@@ -28,6 +31,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.2.17",
     "@storybook/addon-info": "^3.2.17",
     "@storybook/react": "^3.2.17",
     "codecov": "^3.0.0",
