--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "0.13.2",
     "graphql-tag": "^2.8.0",
     "lodash": "^4.17.5",
+    "mime-types": "^2.1.17",
     "react": "^16.3.2",
     "react-ace": "^5.8.0",
     "react-apollo": "^2.1.2",
@@ -25,6 +26,7 @@
     "react-google-recaptcha": "^0.11.0",
     "react-gravatar": "^2.6.3",
     "react-height": "^3.0.0",
+    "react-pdf-js": "^3.0.3",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.26.0",
     "semantic-ui-css": "^2.3.1",
