--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debounce-promise": "^3.1.0",
     "file-saver": "^1.3.3",
     "formik": "^0.11.11",
+    "github-markdown-css": "^2.10.0",
     "graphql": "0.13.2",
     "graphql-tag": "^2.8.0",
     "lodash": "^4.17.5",
@@ -28,6 +29,7 @@
     "react-google-recaptcha": "^0.11.0",
     "react-gravatar": "^2.6.3",
     "react-height": "^3.0.0",
+    "react-markdown": "^3.1.4",
     "react-pdf-js": "^3.0.3",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.26.0",
