--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-google-recaptcha": "^0.11.0",
     "react-gravatar": "^2.6.3",
     "react-height": "^3.0.0",
+    "react-lowlight": "^1.1.1",
     "react-markdown": "^3.1.4",
     "react-pdf-js": "^3.0.3",
     "react-router-dom": "^4.2.2",
