--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "eslint": "^4.17.0",
+    "faker": "^4.1.0",
+    "jest-plugin-set": "^2.6.0",
     "jest-styled-components": "^4.10.0",
     "prettier": "1.10.2",
     "react-scripts": "1.1.0",
     "react-test-renderer": "^16.2.0",
-    "serve": "^6.4.9"
+    "serve": "^6.4.9",
+    "stampit": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
