--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "github-markdown-css": "^2.10.0",
     "graphql": "0.13.2",
     "graphql-tag": "^2.8.0",
+    "highlight.js": "^9.12.0",
     "lodash": "^4.17.5",
     "mime-types": "^2.1.17",
     "react": "^16.3.2",
