--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=3001
 
+NODE_PATH=src/
+
 REACT_APP_GRECAPTCHA_SITE_KEY="6LewQh8UAAAAAMok-W-6CiQN5buROVD3uRaaKJWU"
 REACT_APP_BACKEND_HOST="http://localhost:3000"
