--- a/package.json
+++ b/package.json
@@ -11,18 +11,28 @@
     "apollo-client": "^2.2.8",
     "apollo-link-batch-http": "^1.2.1",
     "apollo-link-error": "^1.0.7",
+    "b64-to-blob": "^1.2.19",
     "debounce-promise": "^3.1.0",
+    "file-saver": "^1.3.3",
     "formik": "^0.11.11",
+    "github-markdown-css": "^2.10.0",
     "graphql": "0.13.2",
     "graphql-tag": "^2.8.0",
+    "highlight.js": "^9.12.0",
     "lodash": "^4.17.5",
+    "mime-types": "^2.1.17",
     "react": "^16.3.2",
+    "react-ace": "^5.8.0",
     "react-apollo": "^2.1.2",
     "react-async-script": "^0.9.1",
     "react-css-transition-replace": "^3.0.2",
     "react-dom": "^16.3.1",
     "react-google-recaptcha": "^0.11.0",
     "react-gravatar": "^2.6.3",
+    "react-height": "^3.0.0",
+    "react-lowlight": "^1.1.1",
+    "react-markdown": "^3.1.4",
+    "react-pdf-js": "^3.0.3",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.26.0",
     "semantic-ui-css": "^2.3.1",
